test/errors/error7.sp
%b_expr in concatenation is not a basic sort.
#maxint = 1.
sorts
#s=f(#nat,#nat).
#s2=[a][#s].
predicates
rules
